# sanctify-game

./: .dockerignore  .gitmodules  Dockerfile  LICENSE  README.md  docker-compose.yaml
assets/: README.md
cpp/: .gitignore  CMakeLists.txt  README.md  STYLEGUIDE.md  sanctify-clang.Dockerfile  sanctify-emscripten.Dockerfile
cpp/cmake/: add_proto_lib.cmake  add_proto_lib_2.cmake  add_wasm_target.cmake  build_ig_asset_pack_plan.cmake  export_build_tools.cmake  import_build_tools.cmake
cpp/libs/: CMakeLists.txt
cpp/libs/igasset/: CMakeLists.txt  README.md
cpp/libs/igasset/include/igasset/: draco_decoder.h  draco_encoder.h  heightmap.h  igpack_loader.h  image_data.h  proto_converters.h  vertex_formats.h
cpp/libs/igasset/src/: draco_decoder.cc  draco_encoder.cc  heightmap.cc  igpack_loader.cc  image_data.cc  proto_converter.cc  vertex_formats.cc
cpp/libs/igasset/test/: heightmap_test.cc
cpp/libs/igasync/: CMakeLists.txt
cpp/libs/igasync/include/igasync/: concurrent_queue.h  executor_thread.h  frame_task_scheduler.h  promise.h  promise_combiner.h  promise_combiner_old.h  task_list.h
cpp/libs/igasync/src/: executor_thread.cc  promise.cc  promise_combiner.cc  promise_combiner_old.cc  task_list.cc
cpp/libs/igasync/test/: promise_combiner_test.cc  promise_test.cc
cpp/libs/igcore/: CMakeLists.txt  config.h.in  core_vector_vis.natvis  glm.natvis
cpp/libs/igcore/include/igcore/: any.h  bimap.h  dirtyable.h  either.h  fastmath.h  fps_meter.h  ivec.h  log.h  math.h  maybe.h  pod_vector.h  raw_buffer.h  typeid.h  vector.h
cpp/libs/igcore/src/: fastmath.cc  fps_meter.cc  ivec.cc  log.cc  math.cc  maybe.cc  pod_vector.cc  raw_buffer.cc  typeid.cc  vector.cc
cpp/libs/igcore/test/: bimap_test.cc  either_test.cc  maybe_test.cc  pod_vector_test.cc
cpp/libs/igecs/: CMakeLists.txt  README.md
cpp/libs/igecs/src/: ctti_type_id.cc  scheduler.cc  world_view.cc
cpp/libs/igecs/test/: ctti_type_id_test.cc  scheduler_test.cc  world_view_test.cc
cpp/libs/iggpu/: CMakeLists.txt
cpp/libs/iggpu/src/: instance_buffer_store.cc  pipeline_builder.cc  texture.cc  thin_ubo.cc  util.cc
cpp/libs/ignav/: CMakeLIsts.txt
cpp/libs/ignav/src/: detour_navmesh.cc  recast_compiler.cc
cpp/libs/igplatform/: CMakeLists.txt
cpp/libs/igplatform/src/: file_promise_common.cc
cpp/sanctify/: CMakeLists.txt
cpp/sanctify-game-client/: CMakeLists.txt
cpp/sanctify-game-client/platform_src/: app_base.h  app_base_web.cc  native_main.cc
cpp/sanctify-game-client/resources/: base-shader-sources.igpack-plan  terrain-geo.igpack-plan
cpp/sanctify-game-client/src/: sanctify_client_app.cc  sanctify_client_app.h
cpp/sanctify-game-client/src/app_startup_scene/: app_startup_scene.cc  app_startup_scene.h  startup_shader_src.h
cpp/sanctify-game-client/src/game_scene/: game_scene.cc  game_scene.h  game_scene_factory.cc  game_scene_factory.h
cpp/sanctify-game-client/src/io/: glfw_event_emitter.cc  glfw_event_emitter.h
cpp/sanctify-game-server/: CMakeLists.txt  main.cc
cpp/sanctify-game/client/: CMakeLists.txt
cpp/sanctify-game/client/platform_src/: app_base.h  app_base_native.cc  app_base_web.cc  emscripten_bindings.cc
cpp/sanctify-game/client/resources/: base-shader-sources.igpack-plan  terrain-geo.igpack-plan  ybot-character.igpack-plan
cpp/sanctify-game/client/src/: sanctify_client_app.cc  sanctify_client_app.h  scene_base.h
cpp/sanctify-game/common/: CMakeLists.txt  README.md
cpp/sanctify-game/common/resources/: pve-terrain-navmesh.igpack-plan  terrain-navmesh.igpack-plan
cpp/sanctify-game/common/src/: dummy.cc
cpp/sanctify-game/common/test/: game_snapshot_test.cc
cpp/sanctify-game/server/: CMakeLists.txt  README.md  main.cc
cpp/sanctify-game/server/app/: game_server.cc  game_server.h  input_events.cc  input_events.h  net_components.h  net_events.cc  net_events.h
cpp/sanctify-game/server/net/: build_game_token_exchanger.cc  build_game_token_exchanger.h  dummy_game_token_exchanger.cc  dummy_game_token_exchanger.h  igameserver.h  igametokenexchanger.cc  igametokenexchanger.h  net_server.cc  net_server.h  types.h  ws_server.cc  ws_server.h
cpp/sanctify-game/server/util/: cli.h  event_scheduler.cc  event_scheduler.h  server_clock.cc  server_clock.h  types.h  visit.h
cpp/sanctify/common/: CMakeLists.txt
cpp/sanctify/common/logic/: CMakeLists.txt
cpp/sanctify/common/proto/: common_logic_snapshot.proto  primitives.proto
cpp/sanctify/common/render/: CMakeLists.txt
cpp/sanctify/common/scene/: CMakeLists.txt  scene_base.h
cpp/sanctify/common/simple_client_app/: CMakeLists.txt  README.md  evil_emscripten_hacks.cc  evil_emscripten_hacks.h  simple_client_app_base.cc  simple_client_app_base.h  simple_client_app_base_native.cc  simple_client_app_base_web.cc
cpp/sanctify/common/user_input/: CMakeLists.txt  ecs_util.cc  ecs_util.h  events.h
cpp/sanctify/common/util/: CMakeLists.txt  camera_util.cc  camera_util.h  camera_util_test.cc  resource_registry.h  resource_registry_test.cc  transform_3d.cc  transform_3d.h
cpp/sanctify/pve/: CMakeLists.txt
cpp/sanctify/pve/net_logic_common/: CMakeLists.txt  client_message_queue.cc  client_message_queue.h
cpp/sanctify/pve/offline_client/: CMakeLists.txt  README.md  embind_main.cc  native_main.cc  offline_client_app.cc  offline_client_app.h  pve_offline_client_config.proto
cpp/sanctify/pve/render_common/: CMakeLists.txt
cpp/tools/: CMakeLists.txt
cpp/tools/igpack-gen/: CMakeLists.txt  README.md  main.cc  plan_executor.cc  plan_executor.h
cpp/tools/igpack-gen/converters/: assimp_animation_processor.cc  assimp_animation_processor.h  assimp_geo_processor.cc  assimp_geo_processor.h  recast_navmesh_processor.cc  recast_navmesh_processor.h  wgsl_processor.cc  wgsl_processor.h
cpp/tools/igpack-gen/util/: assimp_scene_cache.cc  assimp_scene_cache.h  file_cache.cc  file_cache.h
cpp/tools/list-assimp-assets/: CMakeLists.txt  main.cc
cpp/tools/map-editor/: CMakeLists.txt  main.cc
cpp/tools/map-editor/resources/: base-app.igpack-plan
cpp/tools/map-editor/src/: app_window.cc  app_window.h  map_editor_app.cc  map_editor_app.h
(+334 files in other folders)
